--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.1.0",
     "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
