--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.3",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^4.0.5",
     "react-toastify": "^9.0.1",
     "react-visibility-sensor": "^5.1.1",
     "tw-elements": "^1.0.0-alpha12",
